# TaskFlow-TestBed

./: .gitignore  AGENT_CONTEXT.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  tasks.py  users.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  task.py  user.py
backend/app/tests/: conftest.py  test_auth.py  test_tasks.py
frontend/: Dockerfile  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Header.tsx  Layout.tsx  TaskCard.tsx
frontend/src/hooks/: useAuthStore.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  LoginPage.tsx  TaskDetail.tsx  TaskDetailPage.tsx  TaskList.tsx  TasksPage.tsx
frontend/src/styles/: index.css
frontend/src/types/: index.ts  task.ts  user.ts
frontend/src/utils/: api.ts
